restricated add button width to prevent horizontal scrolling

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -19,3 +19,9 @@
     width: 126px;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .header__logo {
+    margin-left: 27px;
+  }
+}
