--- a/blocks/page.css
+++ b/blocks/page.css
@@ -17,3 +17,9 @@
   position: relative;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 480px) {
+  .page__content {
+    padding: 0;
+  }
+}
